Files aanmaken en een form
Form aanmaken om items toe te voegen

--- a/main.html
+++ b/main.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Document</title>
+    <title>Boodschappen</title>
 </head>
 <body>
-    <header>
-        <h1 class="naam">De niet zo standaard boeken winkel</h1>
-    </header>
-        <ul>
-            <li>boek 1</li>
-        </ul>
-        <!-- winkel mand met anitmatie dat schuift -->
+    <div class="toevoegen">
+        <h1 class="titel">Boodschappen</h1>
+        <form class="itemToevoegen">
+            <input type="text">
+            <button id="toevoegen">Toevoegen</button>
+        </form>
+
+
+    </div>
 </body>
 </html>
