--- a/main.html
+++ b/main.html
@@ -9,12 +9,13 @@
 <body>
     <div class="toevoegen">
         <h1 class="titel">Boodschappen</h1>
-        <form class="itemToevoegen">
-            <input type="text">
-            <button id="toevoegen">Toevoegen</button>
+        <form class="itemToevoegen" id="itemToevoegen">
+            <input class="item" id="item" placeholder="Voorwerp">
+            <input type="number"  class="hoeveelheid" id="hoeveelheid" min="1" max="100">
+            <button type="submit" class="toevoegKnop" id="toevoegKnop">Toevoegen</button>
         </form>
-
-
+        <ul id="boodschappenlijst"></ul>
+        <script src="script.js"></script>
     </div>
 </body>
 </html>
