--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
             <input class="ingegevenItem" id="ingegevenItem" placeholder="Voorwerp">
             <button onclick="itemToevoegen(ingegevenItem)" type="submit" class="toevoegKnop" id="toevoegKnop">Toevoegen</button>
         </form>
-        <ul id="boodschappenlijst"></ul>
+        <ul id="boodschappenlijstWeergeven"></ul>
         <script src="script.js"></script>
     </div>
 
