--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
         <h1 class="titel">Boodschappen</h1>
         <form class="itemToevoegen" id="itemToevoegen">
             <input class="ingegevenItem" id="ingegevenItem" placeholder="Voorwerp" required>
-            <input type="number" name="ingegevenHoeveelheid" id="ingegevenHoeveelheid" class="ingegevenHoeveelheid" required>
+            <input type="number" name="ingegevenHoeveelheid" id="ingegevenHoeveelheid" class="ingegevenHoeveelheid" required min="1">
             <button onclick="itemToevoegen(ingegevenItem)" type="submit" class="toevoegKnop" id="toevoegKnop">Toevoegen</button>
         </form>
         <ul id="boodschappenlijstWeergeven"></ul>
