--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <title>Boodschappen</title>
 </head>
 <body>
-    <div class="toevoegen">
+    <div class="lijst">
         <h1 class="titel">Boodschappen</h1>
         <form class="itemToevoegen" id="itemToevoegen">
             <input class="ingegevenItem" id="ingegevenItem" placeholder="Voorwerp" required>
