laatste laatste push

--- a/main.html
+++ b/main.html
@@ -17,8 +17,8 @@
         <ul id="boodschappenlijstWeergeven"></ul>
         <script src="script.js"></script>
         <hr>
-        <p>Totaal: </p>
-        <p id="totaalWeergeveb"></p>
+        <!-- <p>Totaal: </p>
+        <p id="totaalWeergeveb"></p> -->
     </div>
 
     <script src="script.js"></script>
